--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
 	"dependencies": {
-		"browser-sync": "^2.24.5"
+		"browser-sync": "^2.24.5",
+		"postcss": "^6.0.23",
+		"rollup": "^0.62.0",
+		"rollup-plugin-vue": "^4.3.1",
+		"vue": "^2.5.16",
+		"vue-template-compiler": "^2.5.16"
 	}
 }
